--- a/integration/pieds-page.html
+++ b/integration/pieds-page.html
@@ -2,18 +2,19 @@
         <footer> <!-- bannière en bas de la page -->
             <div class="colonnes">
                 <div class = "social-media">
-                    <h4>Horaires d'ouverture</h4>
+                    <h4>Horaires d'ouverture de l'accueil</h4>
                     <ul>
-                        <li>Du lundi au jeudi : 08h30 - 19h00</li>
-                        <li>Vendredi : 08h30 - 16h00</li>
+                        <li>Du lundi au vendredi : 08h30 - 18h00</li>
+                        <li>Samedi : 07h00 - 21h00</li>
+                        <li>Dimanche : 09h00 - 12h00</li>
                     </ul>
                 </div>
                 <div class="contact">
                     <h4>Contact</h4>
                     <ul>
-                        <li><a href="mailto:contact.bu@uca.fr"><span class="fas fa-envelope"></span> contact.bu@uca.fr</a></li> <!-- mailto ouvre une application de messagerie -->
-                        <li><a href="tel:0443791162"><span class="fas fa-phone"></span> 04 43 79 11 62</a></li> <!-- tel ouvre une application de téléphonie -->
-                        <li><a href="geo:44.9335557,2.44148"><span class="fas fa-map-marker-alt"></span> 100 rue de l'Egalite - 15000 Aurillac</a></li> <!-- geo ouvre une carte -->
+                        <li><a href="mailto:contact@camping.fr"><span class="fas fa-envelope"></span> contact@camping.fr</a></li> <!-- mailto ouvre une application de messagerie -->
+                        <li><a href="tel:0400000000"><span class="fas fa-phone"></span> 04 00 00 00 00</a></li> <!-- tel ouvre une application de téléphonie -->
+                        <li><a href="geo:0.00,0.00"><span class="fas fa-map-marker-alt"></span> 150 avenue de la plage - xx xxx Ville</a></li> <!-- geo ouvre une carte -->
                     </ul>
                 </div>
                 <div class="assistance">
@@ -24,7 +25,7 @@
                 </div>
             </div>
             <div class="end">
-                <p>Copyright &copy; 2025 <span id="annee-actu"></span> Bibliothèque universitaire. Tout droits réservés.</p>
+                <p>Copyright &copy; 2025 <span id="annee-actu"></span> Camping. Tout droits réservés.</p>
             </div>
         </footer>
         <div id="conditions-modal" class="modal"> <!-- modal des conditions d'utilisation du site, s'ouvre au clic dans la rubrique assitance du pied de page -->
@@ -32,8 +33,8 @@
                 <span class="close">&times;</span> <!-- bouton pour fermer le modal -->
                 <h2>Conditions d'utilisation</h2>
                 <p>
-                En accédant au site <strong>Bibliothèque universitaire</strong>, vous acceptez les présentes conditions 
-                d'utilisation. Ce site a pour objectif de gérer la bibliothèque de l'Université Clermont Auvergne.
+                En accédant au site <strong>Camping</strong>, vous acceptez les présentes conditions 
+                d'utilisation. Ce site a pour objectif de gérer le camping.
                 </p>
                 <h3>Propriété intellectuelle</h3>
                 <p>
@@ -43,7 +44,7 @@
                 <h3>Responsabilité</h3>
                 <p>
                 Les informations présentées sur ce site sont fournies à titre indicatif.
-                L'université' s'efforce d'assurer leur exactitude mais ne peut garantir l'absence d'erreurs ou d'omissions.
+                Le camping s'efforce d'assurer leur exactitude mais ne peut garantir l'absence d'erreurs ou d'omissions.
                 </p>
                 <h3>Données personnelles</h3>
                 <p>
@@ -53,7 +54,7 @@
                 <h3>Contact</h3>
                 <p>
                 Pour toute question relative à ces conditions, vous pouvez nous contacter via 
-                l'adresse <a href="mailto:contact.bu@uca.fr">contact.bu@uca.fr</a>.
+                l'adresse <a href="mailto:contact@camping.fr">contact@camping.fr</a>.
                 </p>
             </div>
         </div>
