video player integration

--- a/integration/pieds-page.html
+++ b/integration/pieds-page.html
@@ -12,9 +12,9 @@
                 <div class="contact">
                     <h4>Contact</h4>
                     <ul>
-                        <li><a href="mailto:contact@camping.fr"><span class="fas fa-envelope"></span> contact@camping.fr</a></li> <!-- mailto ouvre une application de messagerie -->
+                        <li><a href="mailto:contact@tentations-cotieres.fr"><span class="fas fa-envelope"></span> contact@tentations-cotieres.fr</a></li> <!-- mailto ouvre une application de messagerie -->
                         <li><a href="tel:0400000000"><span class="fas fa-phone"></span> 04 00 00 00 00</a></li> <!-- tel ouvre une application de téléphonie -->
-                        <li><a href="geo:0.00,0.00"><span class="fas fa-map-marker-alt"></span> 150 avenue de la plage - xx xxx Ville</a></li> <!-- geo ouvre une carte -->
+                        <li><a href="geo:44.6044,-1.2091"><span class="fas fa-map-marker-alt"></span> 17 Avenue Louis Gaume,<br> 33260 La Teste-de-Buch, France</a></li> <!-- geo ouvre une carte -->
                     </ul>
                 </div>
                 <div class="assistance">
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="end">
-                <p>Copyright &copy; 2025 <span id="annee-actu"></span> Camping. Tout droits réservés.</p>
+                <p>&copy; 2025 <span id="annee-actu"></span> Tentations Côtières. Tout droits réservés.</p>
             </div>
         </footer>
         <div id="conditions-modal" class="modal"> <!-- modal des conditions d'utilisation du site, s'ouvre au clic dans la rubrique assitance du pied de page -->
@@ -33,7 +33,7 @@
                 <span class="close">&times;</span> <!-- bouton pour fermer le modal -->
                 <h2>Conditions d'utilisation</h2>
                 <p>
-                En accédant au site <strong>Camping</strong>, vous acceptez les présentes conditions 
+                En accédant au site <strong>Tentations Côtières</strong>, vous acceptez les présentes conditions 
                 d'utilisation. Ce site a pour objectif de gérer le camping.
                 </p>
                 <h3>Propriété intellectuelle</h3>
@@ -44,7 +44,7 @@
                 <h3>Responsabilité</h3>
                 <p>
                 Les informations présentées sur ce site sont fournies à titre indicatif.
-                Le camping s'efforce d'assurer leur exactitude mais ne peut garantir l'absence d'erreurs ou d'omissions.
+                Le camping Tentations Côtières s'efforce d'assurer leur exactitude mais ne peut garantir l'absence d'erreurs ou d'omissions.
                 </p>
                 <h3>Données personnelles</h3>
                 <p>
@@ -54,7 +54,7 @@
                 <h3>Contact</h3>
                 <p>
                 Pour toute question relative à ces conditions, vous pouvez nous contacter via 
-                l'adresse <a href="mailto:contact@camping.fr">contact@camping.fr</a>.
+                l'adresse <a href="mailto:contact@tentations-cotieres.fr">contact@tentations-cotieres.fr</a>.
                 </p>
             </div>
         </div>
