--- a/integration/pieds-page.html
+++ b/integration/pieds-page.html
@@ -14,7 +14,7 @@
                     <ul>
                         <li><a href="mailto:contact@tentations-cotieres.fr"><span class="fas fa-envelope"></span> contact@tentations-cotieres.fr</a></li> <!-- mailto ouvre une application de messagerie -->
                         <li><a href="tel:0400000000"><span class="fas fa-phone"></span> 04 00 00 00 00</a></li> <!-- tel ouvre une application de téléphonie -->
-                        <li><a href="geo:44.6044,-1.2091"><span class="fas fa-map-marker-alt"></span> 17 Avenue Louis Gaume,<br> 33260 La Teste-de-Buch, France</a></li> <!-- geo ouvre une carte -->
+                        <li><a href="geo:44.6044,-1.2091"><span class="fas fa-map-marker-alt"></span> 17 Avenue Louis Gaume,<br> 33 260 La Teste-de-Buch, France</a></li> <!-- geo ouvre une carte -->
                     </ul>
                 </div>
                 <div class="assistance">
